--- a/microsetta_interface/templates/account_details.jinja2
+++ b/microsetta_interface/templates/account_details.jinja2
@@ -1,5 +1,5 @@
 {% extends "sitebase.jinja2" %}
-{% set page_title = "Account Details" %}
+{% set page_title = _("Account Details") %}
 {% set show_breadcrumbs = True %}
 {% block head %}
     <script type="text/javascript" language="javascript" src="/static/js/ruleset.js"></script>
@@ -88,9 +88,9 @@
                 }
                 else
                 {
-                    $("#city_label").text("City/Ciudad*");
-                    $("#state_label").text("State/Estado*");
-                    $("#post_code_label").text("Zip Code/Codigo Postal*");
+                    $("#city_label").text("{{ _('City') }}*");
+                    $("#state_label").text("{{ _('State') }}*");
+                    $("#post_code_label").text("{{ _('Zip Code') }}*");
                     $("#state").empty();
 
                     for (var state of US_STATES)
@@ -111,40 +111,39 @@
 {% endblock %}
 {% block breadcrumb %}
     {% if not CREATE_ACCT %}
-    <li class="breadcrumb-item"><a href="/accounts/{{account.account_id}}">Profile</a></li>
+    <li class="breadcrumb-item"><a href="/accounts/{{account.account_id}}">{{ _('Profile') }}</a></li>
     {% endif %}
-    <li class="breadcrumb-item active" aria-current="page">Profile Details</li>
+    <li class="breadcrumb-item active" aria-current="page">{{ _('Profile Details') }}</li>
 {% endblock %}
 {% block content %}
 <div class="card">
-    <h5 class="card-header">Profile Details</h5>
+    <h5 class="card-header">{{ _('Profile Details') }}</h5>
     <div class="card-body">
         <form id="acct_form" name="acct_form" method="post">
             <div class="form-group">
-                <label for="email" name="email_label">Email/Correo electrónico*</label>
+                <label for="email" name="email_label">{{ _('Email') }}*</label>
                 <input id="email" name="email" class="form-control" type="hidden" value="{{account.email |e}}"/>
                 <input id="view_email" name="view_email" class="form-control" type="email" value="{{account.email |e}}" disabled="disabled" readonly/>
             </div>
             <div class="form-group">
-                <label for="first_name" name="first_name_label">First Name/Nombre*</label>
+                <label for="first_name" name="first_name_label">{{ _('First Name') }}*</label>
                 <input id="first_name" name="first_name" class="form-control" value="{{account.first_name |e}}" type="text" />
             </div>
             <div class="form-group">
-                <label for="last_name" name="last_name_label">Last Name/Nombre de Familia*</label>
+                <label for="last_name" name="last_name_label">{{ _('Last Name') }}*</label>
                 <input id="last_name" name="last_name" class="form-control" value="{{account.last_name |e}}" type="text" />
             </div>
             <div class="form-group">
                 <p>
-                <strong>Note to non-US/GB users:</strong> We are working on support for additional countries and
-                expect to have that available soon.
+                <strong>{{ _('Note to non-US/GB users') }}:</strong> {{ _('We are working on support for additional countries and expect to have that available soon.') }}
                 </p>
                 <select id="country_code" name="country_code"/>
-                    <option value="US" {% if account.address.country_code == "US" %} selected {% endif %} >United States</option>
-                    <option value="GB" {% if account.address.country_code == "GB" %} selected {% endif %} >United Kingdom</option>
+                    <option value="US" {% if account.address.country_code == "US" %} selected {% endif %} >{{ _('United States') }}</option>
+                    <option value="GB" {% if account.address.country_code == "GB" %} selected {% endif %} >{{ _('United Kingdom') }}</option>
                 </select>
             </div>
             <div class="form-group">
-                <label for="street" id="street_label" >Street Address/Dirección*</label>
+                <label for="street" id="street_label" >{{ _('Street Address') }}*</label>
                 <input id="street" name="street" class="form-control" value="{{account.address.street |e}}" type="text" />
             </div>
             <div class="form-group">
@@ -166,25 +165,25 @@
             {% if CREATE_ACCT %}
             <div class="card mb-3">
                 <div class="card-header">
-                    Activation Info
+                    {{ _('Activation Info') }}
                 </div>
                 <div class="card-body">
                     <div class="form-group">
-                        <label for="kit_name" name="kit_name_label">Kit ID/ID del kit</label>
+                        <label for="kit_name" name="kit_name_label">{{ _('Kit ID') }}</label>
                         <input id="kit_name" name="kit_name" class="form-control" type="text"/>
                     </div>
-                    <div class="text-center">-OR-</div>
+                    <div class="text-center">-{{ _('OR') }}-</div>
                     <div class="form-group">
-                        <label for="code" name="code_label">Activation Code</label>
+                        <label for="code" name="code_label">{{ _('Activation Code') }}</label>
                         <input id="code" name="code" class="form-control" type="text" placeholder="TMI-XXXXX-XXXXX-XXXXX"/>
                     </div>
                 </div>
             </div>
             {% endif %}
             {% if CREATE_ACCT %}
-            <button type="submit" class="btn btn-primary">Save Profile</button>
+            <button type="submit" class="btn btn-primary">{{ _('Save Profile') }}</button>
             {% else %}
-            <button type="submit" class="btn btn-primary">Save Profile</button>
+            <button type="submit" class="btn btn-primary">{{ _('Save Profile') }}</button>
             {% endif %}
         </form>
     </div>
