--- a/microsetta_interface/templates/update_email.jinja2
+++ b/microsetta_interface/templates/update_email.jinja2
@@ -1,5 +1,5 @@
 {% extends "sitebase.jinja2" %}
-{% set page_title = "Email Update" %}
+{% set page_title = _("Email Update") %}
 {% set show_breadcrumbs = True %}
 {% block head %}
     <script>
@@ -9,17 +9,16 @@
     </script>
 {% endblock %}
 {% block content %}
-    It appears that the email we have for your account is not the same as the email
-    you logged in with.  Would you like us to update your email in our records?
+    {{ _('It appears that the email we have for your account is not the same as the email you logged in with.  Would you like us to update your email in our records?') }}
     <br />
     <br />
     <form method="post" name="update_email_form" action="/accounts/{{ account_id }}/update_email">
         <input type="hidden" id="do_update" name = "do_update" value="Yes" />
         <button type="submit" class="btn btn-light" onclick="cancelEmailUpdate();">
-            No, skip and continue
+            {{ _('No, skip and continue') }}
         </button>
         <button type = "submit" class="btn btn-primary">
-            Yes, update and continue
+            {{ _('Yes, update and continue') }}
         </button>
     </form>
 {% endblock %}
