--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -1759,7 +1759,7 @@
                   links to them, are listed below.
                   </p>
 
-                  <h5>The Microsetta Initiatiave</h5>
+                  <h5>The Microsetta Initiative</h5>
                   <ul>
                         <span id="dataset_links_tmi" class="info-loader text-success" >DATASET_LINKS</span>
                   </ul>
